--- a/client/src/about.css
+++ b/client/src/about.css
@@ -1,4 +1,9 @@
-/* About Me page styling */
+/*
+ * File Name: styles.css
+ * Student's Name: Maria Paula Nova
+ * StudentID: 301374220
+ * Date: October 2, 2024
+ */
 .about-me {
     max-width: 800px;
     margin: 0 auto;
