--- a/client/src/about.css
+++ b/client/src/about.css
@@ -1,5 +1,5 @@
 /*
- * File Name: styles.css
+ * File Name: about.css
  * Student's Name: Maria Paula Nova
  * StudentID: 301374220
  * Date: October 2, 2024
