--- a/client/src/contact.css
+++ b/client/src/contact.css
@@ -1,3 +1,10 @@
+/*
+ * File Name: contact.css
+ * Student's Name: Maria Paula Nova
+ * StudentID: 301374220
+ * Date: October 2, 2024
+ */
+
 .contact-page {
     max-width: 800px;
     margin: 0 auto;
