--- a/client/src/App.css
+++ b/client/src/App.css
@@ -204,7 +204,7 @@ button:hover {
 }
 
 .contact-page {
-  background-color: #eacdc2; /* Soft light background */
+  background-color: #eacdc2; 
   padding: 3rem;
   color: #333;
 }
